--- a/RottenTomatoes/Base.lproj/Main.storyboard
+++ b/RottenTomatoes/Base.lproj/Main.storyboard
@@ -17,9 +17,15 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="BDF-Sb-tIb">
+                                    <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <animations/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieCell" rowHeight="87" id="zcQ-DW-r9Y" customClass="MovieCell">
-                                        <rect key="frame" x="0.0" y="92" width="320" height="87"/>
+                                        <rect key="frame" x="0.0" y="136" width="320" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zcQ-DW-r9Y" id="tSx-Y6-hZu">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="86.5"/>
@@ -83,6 +89,7 @@
                     <navigationItem key="navigationItem" title="Movies" id="kA2-2G-M6g"/>
                     <connections>
                         <outlet property="networkErrorView" destination="Ovi-OJ-hpG" id="5oh-5n-HTU"/>
+                        <outlet property="searchBar" destination="BDF-Sb-tIb" id="npk-73-K97"/>
                         <outlet property="tableView" destination="vHe-Jn-btU" id="YK2-xD-5VS"/>
                     </connections>
                 </viewController>
